Add location name on banners

--- a/plugins/siapp/website/models/banner/columns.yaml
+++ b/plugins/siapp/website/models/banner/columns.yaml
@@ -5,6 +5,8 @@ columns:
     location_id:
         label: Localização
         type: number
+        select: name
+        relation: location
     name:
         label: 'Nome do banner'
         type: text
